@@ -1,5 +1,6 @@
 package br.unb.cic.mop.bench02.predictablekeystorepassword;
 
+import java.io.File;
 import java.io.IOException;
 import java.net.URL;
 import java.security.KeyStore;
@@ -11,7 +12,7 @@ public class PredictableKeyStorePasswordABICase3 {
     URL cacerts;
     public static void main(String args[]) throws KeyStoreException, IOException, CertificateException, NoSuchAlgorithmException {
         PredictableKeyStorePasswordABICase3 pkspac = new PredictableKeyStorePasswordABICase3();
-        String key = "changeit";
+        String key = "password";
         pkspac.method1(key);
     }
 
@@ -23,7 +24,7 @@ public class PredictableKeyStorePasswordABICase3 {
     public void method2(String key) throws KeyStoreException, IOException, CertificateException, NoSuchAlgorithmException {
         String type = "JKS";
         KeyStore ks = KeyStore.getInstance(type);
-        cacerts = new URL("./target/test-classes/testInput-ks");
+        cacerts = new File("./target/test-classes/testInput-ks").toURI().toURL();
         ks.load(cacerts.openStream(), key.toCharArray());
     }
 }
